metadata/force-app/main/default/objects/CustomName_VPoVY__c/CustomName_VPoVY__c.object-meta.xml
<CustomObject>
    <description>Description_sZxIC</description>
    <label>CustomLabel_VyIhl</label>
    <nameField>
        <label>CustomLabel_VyIhl</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_VyIhls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>