metadata/force-app/main/default/objects/CustomName_VPoVY__c/fields/CustomField_ReNPv__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ReNPv__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldqAVji</label>
    <length>255</length>
    <type>Text</type>
</CustomField>