metadata/force-app/main/default/objects/CustomName_VPoVY__c/fields/CustomField_uobSh__c.field-meta.xml
<CustomField>
    <fullName>CustomField_uobSh__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldFSlRD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>